# herbarium_RAG

./: .gitignore  CLAUDE.md  conftest.py  pyproject.toml
config/: backbone.yaml  default.yaml  regions.yaml
docs/: DECISIONS.md  SPEC.md
notebooks/: train_colab.ipynb
scripts/: build_california_pipeline.py  download_data.sh  fetch_opentree_fixture.py  precompute_features.py  prepare_training_data.py  verify_naflora_load.py
src/data/: __init__.py  balance.py  dataset.py  download.py  filter.py  label_encoder.py  parse.py
src/eval/: metrics.py  stratified.py
src/index/: build.py  bundle.py
src/model/: backbone.py  heads.py  hyperbolic.py  lora.py
src/retrieval/: encode.py  graph.py  search.py
src/taxonomy/: gnn.py  opentree.py  tnrs.py
src/train/: loss.py  train_global.py  train_regional_lora.py
src/viz/: confidence.py  poincare.py
tests/: test_data.py  test_eval.py  test_index.py  test_integration.py  test_model.py  test_retrieval.py  test_streaming.py  test_taxonomy.py  test_train.py  test_viz.py
tests/fixtures/: naflora_mini.json  naflora_mini_train.tsv  opentree_mini_subtree.json
