[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperbolic-herbarium"
version = "0.1.0"
description = "Offline plant identification via hyperbolic retrieval and phylogenetic graph aggregation"
requires-python = ">=3.11"
license = { text = "MIT" }
# Lightweight core — data pipeline, taxonomy, visualization helpers.
# ML/training dependencies are in the [ml] extra to avoid
# requiring a GPU environment just to run data prep or import tests.
dependencies = [
    "networkx>=3.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "Pillow>=10.0",
    "tqdm>=4.65",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Data pipeline extras — DwCA parsing and taxonomy API
data = [
    "opentree>=1.0.0",              # PyPI latest is 1.0.1; spec listed 3.0.0 which does not exist
    "python-dwca-reader>=0.9.0",    # package is python-dwca-reader, imported as dwca
]
# Full ML stack — required for training, indexing, and inference
ml = [
    "torch>=2.2.0",
    "open_clip_torch>=2.24.0",
    "peft>=0.10.0",
    "geoopt>=0.5.0",
    "faiss-cpu>=1.7.4",
    "umap-learn>=0.5.5",
    "wandb>=0.16",
    "numpy>=1.26",
]
# GPU indexing/training (install alongside [ml])
gpu = [
    "faiss-gpu>=1.7.4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
# Install everything
all = [
    "hyperbolic-herbarium[ml,dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "network: marks tests that require internet access (deselect with '-m not network')",
]

[tool.ruff]
line-length = 100
target-version = "py311"
